@@ -27,6 +27,9 @@
   \usepackage{bookmark}
   \urlstyle{same} % normal text font (alternatives: tt, rm, sf)
 }{}
+\hypersetup{
+  pdflang={ru},
+}
 
 %%% Body
 \begin{document}
